{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 260,
  "lineage": "49e4db4b-b5e9-5709-3798-1c150ed8a3ce",
  "resources": [
    {
      "module": "module.k8s-cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_panel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-014e30c8a36252ae5",
            "arn": "arn:aws:ec2:us-west-1:228281126655:instance/i-0ecf1063e37066f21",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Jabaren_Iam_profile",
            "id": "i-0ecf1063e37066f21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Jabaren_PolyBot_VM",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-087be6cedbfbc7253",
            "private_dns": "ip-10-0-1-111.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "public_dns": "ec2-54-177-121-204.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.121.204",
            "region": "us-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b40dfcac7423690c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d421f0a0f1014b6",
            "tags": {
              "Env": "dev",
              "Name": "Jabaren_control_panel",
              "Role": "control-panel"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Jabaren_control_panel",
              "Role": "control-panel"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00df1f59df3821ee4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.aws_iam_instance_profile.polybot_Iam_profile",
            "module.k8s-cluster.aws_iam_role.polybot_role",
            "module.k8s-cluster.aws_security_group.cp_sg",
            "module.k8s-cluster.module.polybot_service_vpc.aws_subnet.public",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:228281126655:security-group/sg-00df1f59df3821ee4",
            "description": "Control plane security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00df1f59df3821ee4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Jabaren_control_plane_sg",
            "name_prefix": "",
            "owner_id": "228281126655",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "control_plane_sg"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "control_plane_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-015ad671aac8217bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:228281126655:security-group/sg-08f12af952f203708",
            "description": "Security group for EC2 nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f12af952f203708",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Jabaren-node-sg",
            "name_prefix": "",
            "owner_id": "228281126655",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015ad671aac8217bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.polybot_service_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:228281126655:network-acl/acl-0c67d25ad53dac11f",
            "default_network_acl_id": "acl-0c67d25ad53dac11f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c67d25ad53dac11f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "228281126655",
            "region": "us-west-1",
            "subnet_ids": [
              "subnet-05d421f0a0f1014b6",
              "subnet-0d24550d496e70c49"
            ],
            "tags": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "vpc_id": "vpc-015ad671aac8217bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.polybot_service_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:228281126655:route-table/rtb-0529c57a7ac3f8e95",
            "default_route_table_id": "rtb-0529c57a7ac3f8e95",
            "id": "rtb-0529c57a7ac3f8e95",
            "owner_id": "228281126655",
            "propagating_vgws": null,
            "region": "us-west-1",
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-015ad671aac8217bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.polybot_service_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:228281126655:security-group/sg-0e2e8acdd749caaaf",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e2e8acdd749caaaf",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "228281126655",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "vpc_id": "vpc-015ad671aac8217bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.polybot_service_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:228281126655:internet-gateway/igw-00b155ea959d6cce4",
            "id": "igw-00b155ea959d6cce4",
            "owner_id": "228281126655",
            "region": "us-west-1",
            "tags": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "vpc_id": "vpc-015ad671aac8217bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.polybot_service_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00b155ea959d6cce4",
            "id": "r-rtb-07efcb7ddecf5f8ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-1",
            "route_table_id": "rtb-07efcb7ddecf5f8ef",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_internet_gateway.this",
            "module.k8s-cluster.module.polybot_service_vpc.aws_route_table.public",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.polybot_service_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:228281126655:route-table/rtb-07efcb7ddecf5f8ef",
            "id": "rtb-07efcb7ddecf5f8ef",
            "owner_id": "228281126655",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-015ad671aac8217bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.polybot_service_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b30b527f8d4dc733",
            "region": "us-west-1",
            "route_table_id": "rtb-07efcb7ddecf5f8ef",
            "subnet_id": "subnet-05d421f0a0f1014b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_route_table.public",
            "module.k8s-cluster.module.polybot_service_vpc.aws_subnet.public",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b8b1cd6dfb22fb",
            "region": "us-west-1",
            "route_table_id": "rtb-07efcb7ddecf5f8ef",
            "subnet_id": "subnet-0d24550d496e70c49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_route_table.public",
            "module.k8s-cluster.module.polybot_service_vpc.aws_subnet.public",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.polybot_service_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:228281126655:subnet/subnet-05d421f0a0f1014b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d421f0a0f1014b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228281126655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "vpc_id": "vpc-015ad671aac8217bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:228281126655:subnet/subnet-0d24550d496e70c49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d24550d496e70c49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228281126655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "vpc_id": "vpc-015ad671aac8217bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc.this",
            "module.k8s-cluster.module.polybot_service_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.polybot_service_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:228281126655:vpc/vpc-015ad671aac8217bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c67d25ad53dac11f",
            "default_route_table_id": "rtb-0529c57a7ac3f8e95",
            "default_security_group_id": "sg-0e2e8acdd749caaaf",
            "dhcp_options_id": "dopt-d0e2e6b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015ad671aac8217bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0529c57a7ac3f8e95",
            "owner_id": "228281126655",
            "region": "us-west-1",
            "tags": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Jabaren-polybot-k8s-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}